[package]
name = "pi_bon"
version = "0.2.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "attempt to downcast the triat object to a concrete type"
repository = "https://github.com/GaiaWorld/pi_bon.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_bon", "serialize"]

[dependencies]
pi_data_view = "0.1"
rand = "0.7"
num-bigint = "0.4"