[package]
name = "pi_bon"
version = "0.2.5"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "attempt to downcast the triat object to a concrete type"
repository = "https://github.com/GaiaWorld/pi_bon.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_bon", "serialize"]

[dependencies]
# pi_data_view = "0.1"
bytes = "1.5"
num-bigint = "0.4"
log = "0.4"

[dev-dependencies]
rand = "0.8"